--- a/package.json
+++ b/package.json
@@ -11,30 +11,27 @@
     "del": "^1.1.1",
     "grunt-cli": "^1.2.0",
     "gulp": "^3.9.1",
-    "gulp-changed": "^1.2.1",
+    "gulp-changed": "^3.1.0",
     "gulp-clean-css": "^2.0.12",
-    "gulp-concat": "^2.5.2",
-    "gulp-header": "^1.2.2",
     "gulp-if": "^1.2.5",
     "gulp-imagemin": "^2.2.1",
     "gulp-inject-string": "^1.1.0",
     "gulp-load-plugins": "^0.10.0",
     "gulp-minify-html": "^1.0.6",
     "gulp-notify": "^2.2.0",
-    "gulp-rev": "^3.0.1",
-    "gulp-rev-replace": "^0.4.3",
     "gulp-run-command": "0.0.7",
     "gulp-sass": "^2.0.4",
     "gulp-size": "^1.2.3",
     "gulp-sourcemaps": "^1.5.2",
-    "gulp-to-ico": "^1.0.0",
     "gulp-useref": "^1.1.2",
     "lodash": "^3.8.0",
-    "request": "^2.81.0",
     "run-sequence": "^1.1.5",
     "sync-request": "^4.0.1"
   },
   "engines": {
     "node": ">=0.10.x"
+  },
+  "dependencies": {
+    "gulp-filter": "^5.0.0"
   }
 }
